--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-server.port=8080
-server.tomcat.connection-timeout=1800s
-server.tomcat.accept-count=500
-server.tomcat.max-connections=8100
-server.tomcat.threads.max=500
-server.tomcat.threads.min-spare=20
-
+server.port=${PORT:8080}
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
@@ -12,3 +6,4 @@ logging.level.org.atmosphere = warn
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
+vaadin.pnpm.enable=false
