--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-server.port=${PORT:8080}
+server.port=8080
+server.tomcat.connection-timeout=1800s
+server.tomcat.accept-count=500
+server.tomcat.max-connections=8100
+server.tomcat.threads.max=500
+server.tomcat.threads.min-spare=20
+
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
